src/app/app.component.scss
.calculator {
    display: flex;
}

.calculator__main {
    flex: 1 1 66.66%;
}

.calculator__history {
    @media screen and (min-width: 651px) { 
        display: initial;
        flex: 1 1 33.33%;
        text-align: right;
      }
    @media screen and (max-width: 650px) { 
        display: none !important;
    }
}

.calculator__input-container {
    margin: 20px 20px 0;

    .calculator__input {
        width: 100%;
        font-size: 40px;
        text-align: right;
    }

    .calculator__current-trans {
        font-size: 30px;
        text-align: right;
    }
}

.calculator__keypad {
    margin-top: 20px;
    display: flex;
    justify-content: center;
    user-select: none;

    td {
        width: 150px;
        height: 75px;
        text-align: center;
        background-color: bisque;
        font-size: xx-large;
        border: darkred;
        border-width: 1px;
    }

    .calculator__keypad-operation {
        background-color: darkgrey;
    }
}

